fix(a11y): Contraste bordure > 3:1. RGAA 3.3

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
     position:fixed; left: 10px; top: 10px; display: inline-block; color: #767676; text-decoration: none; font-family: monospace;
     font-size: 11px;
     border-radius: 99px;
-    border: 1px solid lightgrey;
+    border: 1px solid #909090;
     width: 14px;
     height: 14px;
     text-align: center;
@@ -151,6 +151,7 @@ body {
 }
 
 /* Classes utilitaires */
+/* Masquer un élément visuellement ; reste perceptible par les lecteurs d'écran */
 .visually-hidden {
     overflow: hidden !important;
     position: absolute !important;
